--- a/index.html
+++ b/index.html
@@ -2,38 +2,48 @@
 <html lang="en">
 
 <head>
-  <title>E-Commerce UI Demo</title>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta http-equiv="Pragma" content="no-cache" />
-  <meta http-equiv="Expires" content="-1" />
-  <meta http-equiv="cache-control" content="no-cache" />
-  <link rel="icon" href="https://storage.googleapis.com/www.increff.com/img/favicon.png?v=2" type="image/x-icon" />
-  <link rel="stylesheet" href=" https://static.increff.com/bootstrap/4.6.0/css/bootstrap.min.css?v=2" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-  <script src="https://static.increff.com/jquery/3.6.0/jquery-3.6.0.min.js?v=2"></script>
+    <title>Collection</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="-1" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <link rel="stylesheet" href="/css/global.css">
+    <link rel="icon" href="https://storage.googleapis.com/www.increff.com/img/favicon.png?v=2" type="image/x-icon" />
+    <link rel="stylesheet" href=" https://static.increff.com/bootstrap/4.6.0/css/bootstrap.min.css?v=2" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <script src="https://static.increff.com/jquery/3.6.0/jquery-3.6.0.min.js?v=2"></script>
 </head>
 
 <body>
-  <div id="container"></div>
-  <script>
-    $(document).ready(function () {
-      const user = localStorage.getItem('user');
-      if (!user) $("#container").load('/html/login.html');
-      else {
-        $("#container").load('/html/list.html');
-      }
-      $.ajax({
-        type: 'GET',
-        url: '/html/toast.html',
-        cache: true,
-      });
-    })
-  </script>
+    <script type="text/javascript" src="javascript/main.js"></script>
+    <div class="loader" id="loader">Loading...</div>
+    <nav class="navbar navbar-light shadow-sm">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">
+                <img src="/assets/brand-logo.png" style="height: 32px;" />
+            </a>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link position-relative" href="/html/checkout.html">
+                        <i class="fas fa-shopping-cart"></i>
+                        <span class="badge badge-pill badge-secondary cart-quantity">0</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-  <script src=" https://static.increff.com/bootstrap/4.6.0/js/bootstrap.bundle.min.js?v=2"></script>
-  <script type="text/javascript" src="/javascript/alert.js"></script>
+    <div class="container-fluid">
+        <div class="row align-items-start">
+            <div class="d-flex flex-wrap mt-3" id="list-container"></div>
+        </div>
+    </div>
+
+    <script type="text/javascript" src="javascript/list.js"></script>
+    <script src=" https://static.increff.com/bootstrap/4.6.0/js/bootstrap.bundle.min.js?v=2"></script>
+    <script type="text/javascript" src="/javascript/alert.js"></script>
 </body>
 
 </html>
