Created product details page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <script type="text/javascript" src="javascript/main.js"></script>
+    <script type="text/javascript" src="/javascript/main.js"></script>
     <div class="loader" id="loader">Loading...</div>
     <nav class="navbar navbar-light shadow-sm">
         <div class="container-fluid">
@@ -35,7 +35,7 @@
         </div>
     </nav>
 
-    <div class="container-fluid">
+    <div class="container">
         <div class="row align-items-start">
             <div class="d-flex flex-wrap mt-3" id="list-container"></div>
         </div>
