--- a/html/checkout.html
+++ b/html/checkout.html
@@ -25,7 +25,7 @@
         </a>
     </nav>
 
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="col-7">
                 <h4 class="font-weight-bold mx-2">Orders</h4>
