--- a/html/detail.html
+++ b/html/detail.html
@@ -1,1 +1,163 @@
-<div>Detail page</div>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <title>Detail</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="-1" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <link rel="stylesheet" href="/css/global.css">
+    <link rel="icon" href="https://storage.googleapis.com/www.increff.com/img/favicon.png?v=2" type="image/x-icon" />
+    <link rel="stylesheet" href=" https://static.increff.com/bootstrap/4.6.0/css/bootstrap.min.css?v=2" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <script src="https://static.increff.com/jquery/3.6.0/jquery-3.6.0.min.js?v=2"></script>
+
+    <style>
+        p {
+            color: #343a40;
+        }
+
+        hr {
+            margin-top: 1.5rem;
+            margin-bottom: 1.5rem;
+        }
+
+        img {
+            object-fit: fill;
+        }
+    </style>
+</head>
+
+<body>
+    <script type="text/javascript" src="/javascript/main.js"></script>
+    <div class="loader" id="loader">Loading...</div>
+    <nav class="navbar navbar-light shadow-sm">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">
+                <img src="/assets/brand-logo.png" style="height: 32px;" />
+            </a>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link position-relative" href="/html/checkout.html">
+                        <i class="fas fa-shopping-cart"></i>
+                        <span class="badge badge-pill badge-secondary cart-quantity">0</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <div class="row image-list"></div>
+            </div>
+            <div class="col-6 py-3">
+                <h4 class="font-weight-bold" id="product-brand"></h4>
+                <h5 class="text-secondary" id="product-name" style="opacity: 0.8;"></h5>
+                <hr>
+                <h6 class="d-flex align-items-center">
+                    <span class="text-dark pr-2">MRP:</span>&nbsp;
+                    <i class="fas fa-rupee-sign fa-xs pr-1"></i>
+                    <span class="font-weight-bold" id="mrp"></span>
+                </h6>
+                <h6>
+                    <span class="text-dark">Size:</span>&nbsp;
+                    <span class="font-weight-bold size"></span>
+                </h6>
+                <form class="mt-4 row align-items-end m-0">
+                    <div class="form-group mb-md-0 col-9 col-md-5 col-lg-4 p-0">
+                        <label for="quantity" class="text-secondary">Quantity</label>
+                        <input type="number" class="form-control" id="quantity" value="1" min="1"
+                            placeholder="Quantity">
+                    </div>
+                    <button type="submit" class="btn btn-primary col-md-5 col-lg-3 col-9 col-sm-6 ml-md-3"
+                        id="#add-to-cart-btn">Add To Cart</button>
+                </form>
+                <hr>
+                <div class="product-description">
+                    <h6 class="font-weight-bold">Product Description</h6>
+                    <p id="description"></p>
+                </div>
+                <div class="product-size-fit mt-2">
+                    <h6 class="font-weight-bold">Size & Fit</h6>
+                    <p>The model (height 5'8") is wearing a size <span class="size"></span></p>
+                </div>
+                <div class="product-size-fit mt-2">
+                    <h6 class="font-weight-bold">Material & Care</h6>
+                    <p>
+                        Material: <span id="material"></span>
+                        <br>
+                        Care: <span id="care"></span>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <!-- <div class="row">
+            <div class="col-6">
+                <div class="row image-list">
+                    <img src="http://assets.myntassets.com/assets/images/13719116/2021/3/3/90d0980a-8b39-48bd-9bf9-a67beb14a9741614753528611-Athena-Fuchsia-Pink-top-with-power-shoulder-sleeve-detail-22-1.jpg"
+                        alt="Image not available" class="w-100 h-100 col-6 py-3">
+                    <img src="http://assets.myntassets.com/assets/images/13719116/2021/3/3/90d0980a-8b39-48bd-9bf9-a67beb14a9741614753528611-Athena-Fuchsia-Pink-top-with-power-shoulder-sleeve-detail-22-1.jpg"
+                        alt="Image not available" class="w-100 h-100 col-6 py-3">
+                    <img src="http://assets.myntassets.com/assets/images/13719116/2021/3/3/90d0980a-8b39-48bd-9bf9-a67beb14a9741614753528611-Athena-Fuchsia-Pink-top-with-power-shoulder-sleeve-detail-22-1.jpg"
+                        alt="Image not available" class="w-100 h-100 col-6 py-3">
+                    <img src="http://assets.myntassets.com/assets/images/13719116/2021/3/3/90d0980a-8b39-48bd-9bf9-a67beb14a9741614753528611-Athena-Fuchsia-Pink-top-with-power-shoulder-sleeve-detail-22-1.jpg"
+                        alt="Image not available" class="w-100 h-100 col-6 py-3">
+                    <img src="http://assets.myntassets.com/assets/images/13719116/2021/3/3/90d0980a-8b39-48bd-9bf9-a67beb14a9741614753528611-Athena-Fuchsia-Pink-top-with-power-shoulder-sleeve-detail-22-1.jpg"
+                        alt="Image not available" class="w-100 h-100 col-6 py-3">
+                </div>
+            </div>
+            <div class="col-6 py-3">
+                <h4 class="font-weight-bold">Under Armour</h4>
+                <h5 class="text-secondary" style="opacity: 0.8;">Fly By Short-BLK</h5>
+                <hr>
+                <h6 class="d-flex align-items-center">
+                    <span class="text-dark pr-2">MRP:</span>&nbsp;
+                    <i class="fas fa-rupee-sign fa-xs pr-1"></i>
+                    <span class="font-weight-bold">5000</span>
+                </h6>
+                <h6>
+                    <span class="text-dark">Size:</span>&nbsp;
+                    <span class="font-weight-bold">XL</span>
+                </h6>
+                <form class="mt-4 row align-items-end m-0">
+                    <div class="form-group mb-md-0 col-9 col-md-5 col-lg-4 p-0">
+                        <label for="quantity" class="text-secondary">Quantity</label>
+                        <input type="number" class="form-control" id="quantity" value="1" min="1"
+                            placeholder="Quantity">
+                    </div>
+                    <button type="submit" class="btn btn-primary col-md-5 col-lg-3 col-9 col-sm-6 ml-md-3"
+                        id="#add-to-cart-btn">Add To Cart</button>
+                </form>
+                <hr>
+                <div class="product-description">
+                    <h6 class="font-weight-bold">Product Detail</h6>
+                    <p>Black and green printed straight kurta, has a nitched round neck, three-quarter sleeves, straight
+                        hem, side slits</p>
+                </div>
+                <div class="product-size-fit mt-2">
+                    <h6 class="font-weight-bold">Size & Fit</h6>
+                    <p>The model (height 5'8") is wearing a size S</p>
+                </div>
+                <div class="product-size-fit mt-2">
+                    <h6 class="font-weight-bold">Material & Care</h6>
+                    <p>
+                        Material: Cotton
+                        <br>
+                        Machine Wash
+                    </p>
+                </div>
+            </div>
+        </div> -->
+    </div>
+
+    <script type="text/javascript" src="/javascript/detail.js"></script>
+    <script src=" https://static.increff.com/bootstrap/4.6.0/js/bootstrap.bundle.min.js?v=2"></script>
+    <script type="text/javascript" src="/javascript/alert.js"></script>
+</body>
+
+</html>
