--- a/html/login.html
+++ b/html/login.html
@@ -17,9 +17,8 @@
 </head>
 
 <body>
-    <script type="text/javascript" src="/javascript/main.js"></script>
     <div class="loader" id="loader">Loading...</div>
-    <div class="container-fluid">
+    <div class="container">
         <div class="row justify-content-center">
             <div class="border rounded shadow py-3 col-11 col-sm-8 col-md-6 col-lg-5 col-xl-3 position-absolute"
                 style="top: 15%;">
