Added loader and messagae toast in all the pages.

--- a/html/login.html
+++ b/html/login.html
@@ -18,6 +18,8 @@
 
 <body>
     <div class="loader" id="loader">Loading...</div>
+    <div class="toast-container"></div>
+
     <div class="container">
         <div class="row justify-content-center">
             <div class="border rounded shadow py-3 col-11 col-sm-8 col-md-6 col-lg-5 col-xl-3 position-absolute"
