--- a/html/checkout.html
+++ b/html/checkout.html
@@ -20,9 +20,16 @@
     <script type="text/javascript" src="/javascript/main.js"></script>
     <div class="loader" id="loader">Loading...</div>
     <nav class="navbar navbar-light shadow-sm mb-4">
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand umr-ato" href="/">
             <img src="/assets/brand-logo.png" style="height: 32px;" />
         </a>
+        <div class="nav-item dropdown px-2">
+            <i class="fas fa-user-circle fa-lg dropdown-toggle" id="navbarDropdown" role="button"
+                data-toggle="dropdown"></i>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#" onclick="logout()">Logout</a>
+            </div>
+        </div>
     </nav>
 
     <div class="container">
@@ -38,20 +45,20 @@
                     <div class="d-flex align-items-center justify-content-between">
                         <span>Order Summary</span>
                         <span id="mrp">
-                            <i class="fas fa-rupee-sign fa-xs pr-1"></i>
+                            <i class="fas fa-rupee-sign fa-xs"></i>
                         </span>
                     </div>
                     <div class="d-flex align-items-center justify-content-between">
                         <span>GST</span>
                         <span id="gst">
-                            <i class="fas fa-rupee-sign fa-xs pr-1"></i>
+                            <i class="fas fa-rupee-sign fa-xs"></i>
                         </span>
                     </div>
                     <hr />
                     <div class="d-flex align-items-center justify-content-between font-weight-bold">
                         <span>Subtotal</span>
                         <span id="subtotal">
-                            <i class="fas fa-rupee-sign fa-xs pr-1"></i>
+                            <i class="fas fa-rupee-sign fa-xs"></i>
                         </span>
                     </div>
                 </div>
