--- a/html/detail.html
+++ b/html/detail.html
@@ -33,20 +33,28 @@
 
 <body>
     <script type="text/javascript" src="/javascript/main.js"></script>
+
     <div class="loader" id="loader">Loading...</div>
+    <div class="toast-container"></div>
+
     <nav class="navbar navbar-light shadow-sm">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand mr-auto" href="/">
                 <img src="/assets/brand-logo.png" style="height: 32px;" />
             </a>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link position-relative" href="/html/checkout.html">
-                        <i class="fas fa-shopping-cart"></i>
-                        <span class="badge badge-pill badge-secondary cart-quantity">0</span>
-                    </a>
-                </li>
-            </ul>
+            <div class="nav-item px-2">
+                <a class="nav-link text-dark position-relative" href="/html/checkout.html">
+                    <i class="fas fa-shopping-cart fa-lg"></i>
+                    <span class="badge badge-pill badge-secondary cart-quantity">0</span>
+                </a>
+            </div>
+            <div class="nav-item dropdown px-2">
+                <i class="fas fa-user-circle text-dark fa-lg dropdown-toggle" id="navbarDropdown" role="button"
+                    data-toggle="dropdown"></i>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#" onclick="logout()">Logout</a>
+                </div>
+            </div>
         </div>
     </nav>
 
@@ -96,63 +104,6 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="row">
-            <div class="col-6">
-                <div class="row image-list">
-                    <img src="http://assets.myntassets.com/assets/images/13719116/2021/3/3/90d0980a-8b39-48bd-9bf9-a67beb14a9741614753528611-Athena-Fuchsia-Pink-top-with-power-shoulder-sleeve-detail-22-1.jpg"
-                        alt="Image not available" class="w-100 h-100 col-6 py-3">
-                    <img src="http://assets.myntassets.com/assets/images/13719116/2021/3/3/90d0980a-8b39-48bd-9bf9-a67beb14a9741614753528611-Athena-Fuchsia-Pink-top-with-power-shoulder-sleeve-detail-22-1.jpg"
-                        alt="Image not available" class="w-100 h-100 col-6 py-3">
-                    <img src="http://assets.myntassets.com/assets/images/13719116/2021/3/3/90d0980a-8b39-48bd-9bf9-a67beb14a9741614753528611-Athena-Fuchsia-Pink-top-with-power-shoulder-sleeve-detail-22-1.jpg"
-                        alt="Image not available" class="w-100 h-100 col-6 py-3">
-                    <img src="http://assets.myntassets.com/assets/images/13719116/2021/3/3/90d0980a-8b39-48bd-9bf9-a67beb14a9741614753528611-Athena-Fuchsia-Pink-top-with-power-shoulder-sleeve-detail-22-1.jpg"
-                        alt="Image not available" class="w-100 h-100 col-6 py-3">
-                    <img src="http://assets.myntassets.com/assets/images/13719116/2021/3/3/90d0980a-8b39-48bd-9bf9-a67beb14a9741614753528611-Athena-Fuchsia-Pink-top-with-power-shoulder-sleeve-detail-22-1.jpg"
-                        alt="Image not available" class="w-100 h-100 col-6 py-3">
-                </div>
-            </div>
-            <div class="col-6 py-3">
-                <h4 class="font-weight-bold">Under Armour</h4>
-                <h5 class="text-secondary" style="opacity: 0.8;">Fly By Short-BLK</h5>
-                <hr>
-                <h6 class="d-flex align-items-center">
-                    <span class="text-dark pr-2">MRP:</span>&nbsp;
-                    <i class="fas fa-rupee-sign fa-xs pr-1"></i>
-                    <span class="font-weight-bold">5000</span>
-                </h6>
-                <h6>
-                    <span class="text-dark">Size:</span>&nbsp;
-                    <span class="font-weight-bold">XL</span>
-                </h6>
-                <form class="mt-4 row align-items-end m-0">
-                    <div class="form-group mb-md-0 col-9 col-md-5 col-lg-4 p-0">
-                        <label for="quantity" class="text-secondary">Quantity</label>
-                        <input type="number" class="form-control" id="quantity" value="1" min="1"
-                            placeholder="Quantity">
-                    </div>
-                    <button type="submit" class="btn btn-primary col-md-5 col-lg-3 col-9 col-sm-6 ml-md-3"
-                        id="#add-to-cart-btn">Add To Cart</button>
-                </form>
-                <hr>
-                <div class="product-description">
-                    <h6 class="font-weight-bold">Product Detail</h6>
-                    <p>Black and green printed straight kurta, has a nitched round neck, three-quarter sleeves, straight
-                        hem, side slits</p>
-                </div>
-                <div class="product-size-fit mt-2">
-                    <h6 class="font-weight-bold">Size & Fit</h6>
-                    <p>The model (height 5'8") is wearing a size S</p>
-                </div>
-                <div class="product-size-fit mt-2">
-                    <h6 class="font-weight-bold">Material & Care</h6>
-                    <p>
-                        Material: Cotton
-                        <br>
-                        Machine Wash
-                    </p>
-                </div>
-            </div>
-        </div> -->
     </div>
 
     <script type="text/javascript" src="/javascript/detail.js"></script>
