--- a/index.html
+++ b/index.html
@@ -18,27 +18,33 @@
 
 <body>
     <script type="text/javascript" src="/javascript/main.js"></script>
-    <div class="loader" id="loader">Loading...</div>
+
+    <div class="loader" id="loader"> Loading...</div>
+    <div class="toast-container"></div>
+
     <nav class="navbar navbar-light shadow-sm">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand mr-auto" href="/">
                 <img src="/assets/brand-logo.png" style="height: 32px;" />
             </a>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link position-relative" href="/html/checkout.html">
-                        <i class="fas fa-shopping-cart"></i>
-                        <span class="badge badge-pill badge-secondary cart-quantity">0</span>
-                    </a>
-                </li>
-            </ul>
+            <div class="nav-item px-2">
+                <a class="nav-link text-dark position-relative" href="/html/checkout.html">
+                    <i class="fas fa-shopping-cart fa-lg"></i>
+                    <span class="badge badge-pill badge-secondary cart-quantity">0</span>
+                </a>
+            </div>
+            <div class="nav-item dropdown px-2">
+                <i class="fas fa-user-circle text-dark fa-lg dropdown-toggle" id="navbarDropdown" role="button"
+                    data-toggle="dropdown"></i>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#" onclick="logout()">Logout</a>
+                </div>
+            </div>
         </div>
     </nav>
 
     <div class="container">
-        <div class="row align-items-start">
-            <div class="d-flex flex-wrap mt-3" id="list-container"></div>
-        </div>
+        <div class="row align-items-start justify-content-around" id="list-container"></div>
     </div>
 
     <script type="text/javascript" src="javascript/list.js"></script>
