--- a/html/detail.html
+++ b/html/detail.html
@@ -34,7 +34,9 @@
 <body>
     <script type="text/javascript" src="/javascript/main.js"></script>
 
-    <div class="loader" id="loader">Loading...</div>
+    <div class="loader-container" id="loader">
+        <div class="loader" > Loading...</div>
+    </div>
     <div class="toast-container"></div>
 
     <nav class="navbar navbar-light shadow-sm">
