--- a/html/login.html
+++ b/html/login.html
@@ -17,7 +17,9 @@
 </head>
 
 <body>
-    <div class="loader" id="loader">Loading...</div>
+    <div class="loader-container" id="loader">
+        <div class="loader" > Loading...</div>
+    </div>
     <div class="toast-container"></div>
 
     <div class="container">
