--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 
 <body>
     <script type="text/javascript" src="/javascript/main.js"></script>
+    <div class="loader-container" id="loader">
+        <div class="loader" > Loading...</div>
+    </div>
 
-    <div class="loader" id="loader"> Loading...</div>
     <div class="toast-container"></div>
 
     <nav class="navbar navbar-light shadow-sm">
