--- a/html/checkout.html
+++ b/html/checkout.html
@@ -69,6 +69,13 @@
             </div>
         </div>
     </div>
+
+    <div class="footer">
+        <div class="container-fluid">
+          <span class="text-muted" id="date-time"></span>
+        </div>
+    </div>
+
     <script type="text/javascript" src="/javascript/checkout.js"></script>
     <script src=" https://static.increff.com/bootstrap/4.6.0/js/bootstrap.bundle.min.js?v=2"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.1/papaparse.min.js"></script>
