--- a/html/detail.html
+++ b/html/detail.html
@@ -108,6 +108,12 @@
         </div>
     </div>
 
+    <div class="footer">
+        <div class="container-fluid">
+          <span class="text-muted" id="date-time"></span>
+        </div>
+    </div>
+
     <script type="text/javascript" src="/javascript/detail.js"></script>
     <script src=" https://static.increff.com/bootstrap/4.6.0/js/bootstrap.bundle.min.js?v=2"></script>
     <script type="text/javascript" src="/javascript/alert.js"></script>
