--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
         <div class="row align-items-start justify-content-around" id="list-container"></div>
     </div>
 
+    <div class="footer">
+        <div class="container-fluid">
+          <span class="text-muted" id="date-time"></span>
+        </div>
+    </div>
+
     <script type="text/javascript" src="javascript/list.js"></script>
     <script src=" https://static.increff.com/bootstrap/4.6.0/js/bootstrap.bundle.min.js?v=2"></script>
     <script type="text/javascript" src="/javascript/alert.js"></script>
