Added tooltip in the navbar items

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
             </a>
             <div class="nav-item px-2">
                 <a class="nav-link text-dark position-relative" href="/html/checkout.html">
-                    <i class="fas fa-shopping-cart fa-lg"></i>
+                    <i class="fas fa-shopping-cart fa-lg" data-tooltip="tooltip" data-placement="bottom" title="Checkout"></i>
                     <span class="badge badge-pill badge-secondary cart-quantity">0</span>
                 </a>
             </div>
             <div class="nav-item dropdown px-2">
                 <i class="fas fa-user-circle text-dark fa-lg dropdown-toggle" id="navbarDropdown" role="button"
-                    data-toggle="dropdown"></i>
+                    data-toggle="dropdown" data-tooltip="tooltip" data-placement="bottom" title="User Info"></i>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#" onclick="logout()">Logout</a>
                 </div>
