--- a/html/checkout.html
+++ b/html/checkout.html
@@ -28,7 +28,7 @@
             </a>
             <div class="nav-item dropdown px-2">
                 <i class="fas fa-user-circle fa-lg dropdown-toggle" id="navbarDropdown" role="button"
-                    data-toggle="dropdown"></i>
+                    data-toggle="dropdown" data-tooltip="tooltip" data-placement="bottom" title="User Info"></i>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#" onclick="logout()">Logout</a>
                 </div>
