--- a/html/detail.html
+++ b/html/detail.html
@@ -35,7 +35,7 @@
     <script type="text/javascript" src="/javascript/main.js"></script>
 
     <div class="loader-container" id="loader">
-        <div class="loader" > Loading...</div>
+        <div class="loader"> Loading...</div>
     </div>
     <div class="toast-container"></div>
 
@@ -46,7 +46,8 @@
             </a>
             <div class="nav-item px-2">
                 <a class="nav-link text-dark position-relative" href="/html/checkout.html">
-                    <i class="fas fa-shopping-cart fa-lg" data-tooltip="tooltip" data-placement="bottom" title="Checkout"></i>
+                    <i class="fas fa-shopping-cart fa-lg" data-tooltip="tooltip" data-placement="bottom"
+                        title="Checkout"></i>
                     <span class="badge badge-pill badge-secondary cart-quantity">0</span>
                 </a>
             </div>
@@ -63,7 +64,21 @@
     <div class="container">
         <div class="row">
             <div class="col-6">
-                <div class="row image-list"></div>
+                <div id="caraouselControl" class="carousel slide" data-ride="carousel" data-interval="2000">
+                    <div class="carousel-inner">
+                        <div class="carousel-item">
+                            <img class="d-block w-100" alt="Image slide">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#caraouselControl" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#caraouselControl" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
             </div>
             <div class="col-6 py-3">
                 <h4 class="font-weight-bold" id="product-brand"></h4>
@@ -110,7 +125,7 @@
 
     <div class="footer">
         <div class="container-fluid">
-          <span class="text-muted" id="date-time"></span>
+            <span class="text-muted" id="date-time"></span>
         </div>
     </div>
 
