--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <script type="text/javascript" src="/javascript/main.js"></script>
     <div class="loader-container" id="loader">
-        <div class="loader" > Loading...</div>
+        <div class="loader"> Loading...</div>
     </div>
 
     <div class="toast-container"></div>
@@ -31,7 +31,8 @@
             </a>
             <div class="nav-item px-2">
                 <a class="nav-link text-dark position-relative" href="/html/checkout.html">
-                    <i class="fas fa-shopping-cart fa-lg" data-tooltip="tooltip" data-placement="bottom" title="Checkout"></i>
+                    <i class="fas fa-shopping-cart fa-lg" data-tooltip="tooltip" data-placement="bottom"
+                        title="Checkout"></i>
                     <span class="badge badge-pill badge-secondary cart-quantity">0</span>
                 </a>
             </div>
@@ -46,12 +47,37 @@
     </nav>
 
     <div class="container">
-        <div class="row align-items-start justify-content-around" id="list-container"></div>
+        <div class="row align-items-start justify-content-around" id="list-container">
+            <div class="d-flex flex-column justify-content-between mx-3 my-2 product-container border rounded shadow-sm cursor-pointer col-3">
+                <div class="mx-auto">
+                    <img class="img-fluid rounded img-thumbnail border-0" src=""alt="Image not Available">
+                </div>
+                <div class="product-detail my-1 px-2 position-relative">
+                    <div class="cart-section p-2" id="cart-section">
+                        <input class="small py-1 px-2" value="1" min="1" type="number" id="input">
+                        <button class="btn btn-outline-primary btn-sm" id="btn">+ Add</button>
+                    </div>
+                    <div class="font-weight-bold product-brand"></div>
+                    <small class="text-secondary product-name"></small>
+                    <div class="d-flex align-items-center justify-content-between">
+                        <div>
+                            <small class="pr-1 text-secondary">Size:</small>
+                            <span class="product-size"></span>
+                        </div>
+                        <div class="d-flex align-items-center">
+                            <small class="pr-1 text-secondary">MRP:</small>
+                            <i class="fas fa-rupee-sign fa-sm pr-1"></i>
+                            <span class="font-weight-bold product-mrp"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="footer">
         <div class="container-fluid">
-          <span class="text-muted" id="date-time"></span>
+            <span class="text-muted" id="date-time"></span>
         </div>
     </div>
 
