--- a/html/checkout.html
+++ b/html/checkout.html
@@ -23,8 +23,8 @@
     </div>
     <nav class="navbar navbar-light shadow-sm mb-4">
         <div class="container-fluid">
-            <a class="navbar-brand umr-ato" href="/">
-                <img src="/assets/brand-logo.png" style="height: 32px;" />
+            <a class="navbar-brand" href="/">
+                <img src="/assets/brand-logo.png" />
             </a>
             <div class="nav-item dropdown px-2">
                 <i class="fas fa-user-circle fa-lg dropdown-toggle" id="navbarDropdown" role="button"
@@ -38,13 +38,13 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-7">
-                <h4 class="font-weight-bold mx-2">Orders</h4>
+            <div class="col-12 col-lg-7">
+                <h4 class="font-weight-bold m-2">Orders</h4>
                 <div class="border rounded shadow-sm" id="product-list">
                     <div class="row m-0 p-2 border-bottom product">
-                        <img class="img-fluid rounded img-thumbnail border-0"
+                        <img class="img-fluid rounded img-thumbnail border-0 checkout-image"
                             src=""
-                            alt="Image not Available" style="height: 10rem;">
+                            alt="Image not Available">
                         <div class="col py-2 d-flex justify-content-between mr-auto flex-wrap">
                             <div>
                                 <h5 class="font-weight-bold product-brand"></h5>
@@ -55,7 +55,7 @@
                                 </div>
                             </div>
                             <div class="justify-items-end">
-                                <div class="d-flex align-items-center justify-content-end font-weight-bold mb-2">
+                                <div class="d-flex align-items-center justify-content-sm-end font-weight-bold mb-2">
                                     <i class="fas fa-rupee-sign fa-xs pr-1"></i>
                                     <span class="product-mrp"></span>
                                 </div>
@@ -69,8 +69,8 @@
                 </div>
                 <h5 class="m-2 d-none" id="no-product">Add more products to place an order</h5>
             </div>
-            <div class="col-5">
-                <h4 class="font-weight-bold mx-2">Payments</h4>
+            <div class="col-12 col-lg-5">
+                <h4 class="font-weight-bold m-2">Payments</h4>
                 <div class="border shadow-sm rounded p-2">
                     <h6 class="font-weight-bold mt-2">Total Items (<span id="total-items">0</span>)</h6>
                     <div class="d-flex align-items-center justify-content-between">
@@ -93,6 +93,7 @@
                         </span>
                     </div>
                 </div>
+                <button type="button" class="btn btn-primary btn-block mt-3" id="place-order">Place Order</button>
             </div>
         </div>
     </div>
