--- a/html/login.html
+++ b/html/login.html
@@ -24,8 +24,7 @@
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="border rounded shadow py-3 col-11 col-sm-8 col-md-6 col-lg-5 col-xl-3 position-absolute"
-                style="top: 15%;">
+            <div class="login-container border rounded shadow py-3 col-11 col-sm-8 col-md-6 col-lg-5 col-xl-3 position-absolute">
                 <img class="img-fluid img-thumbnail border-0 mx-auto d-block mb-4" src="/assets/logo.png" alt="Logo">
                 <h3 class="text-center mb-5">Sign In</h3>
                 <form>
