--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-light shadow-sm">
         <div class="container-fluid">
             <a class="navbar-brand mr-auto" href="/">
-                <img src="/assets/brand-logo.png" style="height: 32px;" />
+                <img src="/assets/brand-logo.png" />
             </a>
             <div class="nav-item px-2">
                 <a class="nav-link text-dark position-relative" href="/html/checkout.html">
@@ -48,9 +48,9 @@
 
     <div class="container">
         <div class="row align-items-start justify-content-around" id="list-container">
-            <div class="d-flex flex-column justify-content-between mx-3 my-2 product-container border rounded shadow-sm cursor-pointer col-3">
+            <div class="d-flex flex-column justify-content-between mx-3 my-2 product-container border rounded shadow-sm cursor-pointer col-12 col-md-5 col-xl-3">
                 <div class="mx-auto">
-                    <img class="img-fluid rounded img-thumbnail border-0" src=""alt="Image not Available">
+                    <img class="img-fluid rounded img-thumbnail border-0 pt-2" src=""alt="Image not Available">
                 </div>
                 <div class="product-detail my-1 px-2 position-relative">
                     <div class="cart-section p-2" id="cart-section">
