Sanitizing the files before rendering the ui

--- a/html/checkout.html
+++ b/html/checkout.html
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-light shadow-sm mb-4">
         <div class="container-fluid">
             <a class="navbar-brand mr-auto" href="/">
-                <img src="/assets/brand-logo.png" />
+                <img src="/assets/logo.png" />
             </a>
             <div class="nav-item px-2">
                 <a class="nav-link text-dark position-relative" href="/html/upload.html">
@@ -49,7 +49,7 @@
             <div class="col-12 col-lg-7">
                 <h4 class="font-weight-bold m-2">Orders</h4>
                 <div class="border rounded shadow-sm" id="product-list">
-                    <div class="row m-0 p-2 border-bottom product d-none">
+                    <div class="row m-0 p-2 border-bottom product bg-white d-none">
                         <img class="img-fluid rounded img-thumbnail border-0 checkout-image"
                             src=""
                             alt="Image not Available">
@@ -80,7 +80,7 @@
             </div>
             <div class="col-12 col-lg-5" id="payment-section">
                 <h4 class="font-weight-bold m-2">Payments</h4>
-                <div class="border shadow-sm rounded p-2">
+                <div class="border shadow-sm rounded p-2 bg-white">
                     <h6 class="font-weight-bold mt-2">Total Items (<span id="total-items">0</span>)</h6>
                     <div class="d-flex align-items-center justify-content-between">
                         <span>Subtotal</span>
