--- a/html/detail.html
+++ b/html/detail.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-light shadow-sm">
         <div class="container-fluid">
             <a class="navbar-brand mr-auto" href="/">
-                <img src="/assets/brand-logo.png" />
+                <img src="/assets/logo.png" />
             </a>
             <div class="nav-item">
                 <a class="nav-link text-dark position-relative" href="/html/upload.html">
@@ -53,9 +53,9 @@
     </nav>
 
     <div class="container d-none">
-        <div class="row">
-            <div class="col-12 col-lg-6">
-                <div id="caraouselControl" class="carousel slide" data-ride="carousel" data-interval="2000">
+        <div class="row justify-content-center bg-white">
+            <div class="col-10 col-md-8 col-lg-6 my-3">
+                <div id="caraouselControl" class="carousel slide" data-ride="carousel" data-interval="3500">
                     <div class="carousel-inner">
                         <div class="carousel-item">
                             <img class="d-block w-100" alt="Image slide">
