--- a/html/login.html
+++ b/html/login.html
@@ -24,7 +24,7 @@
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="login-container border rounded shadow py-3 col-11 col-sm-8 col-md-6 col-lg-5 col-xl-3 position-absolute">
+            <div class="login-container border rounded shadow py-3 col-11 col-sm-8 col-md-6 col-lg-5 col-xl-3 position-absolute bg-white">
                 <img class="img-fluid img-thumbnail border-0 mx-auto d-block mb-4" src="/assets/logo.png" alt="Logo">
                 <h3 class="text-center mb-5">Sign In</h3>
                 <form>
@@ -37,10 +37,10 @@
                         <label for="password" class="font-weight-bold">Password</label>
                         <input type="password" class="form-control" name="password" id="password" required>
                     </div>
-                    <div class="text-danger bg-light p-1 text-center d-none" id="error-message">Username or password
+                    <div class="text-danger p-1 text-center d-none" id="error-message">Username or password
                         error
                     </div>
-                    <button type="submit" class="btn btn-outline-primary mx-auto d-block mt-4">Submit</button>
+                    <button type="submit" class="btn btn-outline-primary mx-auto d-block mt-4">Sign In</button>
                 </form>
             </div>
         </div>
