--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-light shadow-sm">
         <div class="container-fluid">
             <a class="navbar-brand mr-auto" href="/">
-                <img src="/assets/brand-logo.png" />
+                <img src="/assets/logo.png" />
             </a>
             <div class="nav-item">
                 <a class="nav-link text-dark position-relative" href="/html/upload.html">
@@ -54,12 +54,12 @@
 
     <div class="container">
         <div class="row align-items-start justify-content-around" id="list-container">
-            <div class="d-flex flex-column justify-content-between my-2 mx-3 product-container border rounded shadow-sm cursor-pointer col-12 col-md-5 col-xl-3">
+            <div class="d-flex flex-column justify-content-between m-3 pt-3 pb-2 bg-white product-container border rounded shadow-sm cursor-pointer col-12 col-md-5 col-xl-3">
                 <div class="mx-auto">
-                    <img class="img-fluid rounded img-thumbnail border-0 pt-2" src=""alt="Image not Available">
+                    <img class="img-fluid rounded img-thumbnail border-0 p-0" src=""alt="Image not Available">
                 </div>
-                <div class="product-detail my-1 px-1 position-relative">
-                    <div class="cart-section p-2" id="cart-section">
+                <div class="product-detail px-1 position-relative">
+                    <div class="cart-section d-flex align-items-center justify-content-between bg-white w-100" id="cart-section">
                         <input class="small py-1 px-2" value="1" min="1" type="number" id="input">
                         <button class="btn btn-outline-primary btn-sm" id="btn">+ Add</button>
                     </div>
