Added the brand logo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-light shadow-sm">
         <div class="container-fluid">
             <a class="navbar-brand mr-auto" href="/">
-                <img src="/assets/logo.png" />
+                <img src="/assets/brand-logo.png" />
             </a>
             <div class="nav-item">
                 <a class="nav-link text-dark position-relative" href="/html/upload.html">
@@ -53,6 +53,11 @@
     </nav>
 
     <div class="container">
+        <h2
+            class="font-weight-bold mb-3 ml-sm-0 ml-md-3 ml-lg-4 d-inline-block pl-lg-2"
+        >
+            Products
+        </h2>
         <div class="row align-items-start justify-content-around" id="list-container">
             <div class="d-flex flex-column justify-content-between m-3 pt-3 pb-2 bg-white product-container border rounded shadow-sm cursor-pointer col-12 col-md-5 col-xl-3">
                 <div class="mx-auto">
