--- a/html/detail.html
+++ b/html/detail.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-light shadow-sm">
         <div class="container-fluid">
             <a class="navbar-brand mr-auto" href="/">
-                <img src="/assets/logo.png" />
+                <img src="/assets/brand-logo.png" />
             </a>
             <div class="nav-item">
                 <a class="nav-link text-dark position-relative" href="/html/upload.html">
